--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -527,7 +527,7 @@
             <div class="form-group">
                 <label class="sr-only" for="persons">Name, E-Mail o.ä.</label>
                 <div class="input-group">
-                    <input id="persons" type="text" class="form-control fuzzy-search" name="persons" placeholder="Name, E-Mail o.ä."/>
+                    <input id="persons" type="text" class="form-control fuzzy-search" name="persons" placeholder="Name, E-Mail o.ä." data-toggle="tooltip" data-title="Mit Enter bestätigen" data-placement="bottom" />
                     <div class="input-group-addon"><span class="glyphicon glyphicon-search"></span></div>
                 </div>
             </div>
@@ -591,38 +591,38 @@
         <table class="table table-striped table-hover">
             <thead>
             <tr>
-                <th>Name</th>
-                <th>Stadt</th>
-                <th>E-Mail</th>
-                <th>Geburtsdatum</th>
-                <th>Link</th>
+                <th class="col-md-4">Name</th>
+                <th class="col-md-3">Stadt</th>
+                <th class="col-md-2">E-Mail</th>
+                <th class="col-md-2">Geburtsdatum</th>
+                <th class="col-md-1">Link</th>
             </tr>
             </thead>
             <tbody class="person-list" th:remove="all-but-first">
             <tr th:each="person : ${persons}">
-                <td class="person-name" th:text="${person.name}">Claus Störtebecker</td>
-                <td class="person-city" th:text="${person.address.city}">Auf dem Meer</td>
-                <td class="person-email">
+                <td class="person-name col-md-4" th:text="${person.name}">Claus Störtebecker</td>
+                <td class="person-city col-md-3" th:text="${person.address.city}">Auf dem Meer</td>
+                <td class="person-email col-md-2">
                     <a href="mailto:kaeptn@gmx.net" th:href="'mailto:' + ${person.email}" th:text="${person.email}">
                         kaeptn@gmx.net
                     </a>
                 </td>
-                <td class="person-dob" th:text="${person.participant} ? ${{person.participantProfile.dateOfBirth}} : '---'">28.02.1360</td>
-                <td><a href="personDetails.html" th:href="@{'/persons/' + ${person.id}}">Details</a></td>
+                <td class="person-dob col-md-2" th:text="${person.participant} ? ${{person.participantProfile.dateOfBirth}} : '---'">28.02.1360</td>
+                <td class="col-md-1"><a href="personDetails.html" th:href="@{'/persons/' + ${person.id}}">Details</a></td>
             </tr>
             <tr>
-                <td class="person-name">Max Mustermann</td>
-                <td class="person-city">Zu Hause</td>
-                <td class="person-email"><a href="mailto:max.mustermann@web.de">max.mustermann@web.de</a></td>
-                <td class="person-dob">05.09.1985</td>
-                <td><a href="personDetails.html">Details</a></td>
+                <td class="person-name col-md-4">Max Mustermann</td>
+                <td class="person-city col-md-3">Zu Hause</td>
+                <td class="person-email col-md-2"><a href="mailto:max.mustermann@web.de">max.mustermann@web.de</a></td>
+                <td class="person-dob col-md-2">05.09.1985</td>
+                <td class="col-md-1"><a href="personDetails.html">Details</a></td>
             </tr>
             <tr>
-                <td class="person-name">Berta Beate</td>
-                <td class="person-city">Entenhause</td>
-                <td class="person-email"><a href="mailto:berta_beate@googlemail.com">berta_beate@googlemail.com</a></td>
-                <td class="person-dob">14.09.1998</td>
-                <td><a href="personDetails.html">Details</a></td>
+                <td class="person-name col-md-4">Berta Beate</td>
+                <td class="person-city col-md-3">Entenhause</td>
+                <td class="person-email  col-md-2"><a href="mailto:berta_beate@googlemail.com">berta_beate@googlemail.com</a></td>
+                <td class="person-dob col-md-2">14.09.1998</td>
+                <td class="col-md-1"><a href="personDetails.html">Details</a></td>
             </tr>
             </tbody>
         </table>
@@ -635,23 +635,6 @@
         </form>
 
     </section>
-
-    <!-- initialize search bar -->
-    <script type="text/javascript">
-        var fuzzyOptions = {
-            searchClass: "fuzzy-search",
-            location: 0,
-            distance: 100,
-            threshold: 0.4,
-            multiSearch: true
-        };
-        var personOptions = {
-            listClass: "person-list",
-            valueNames: ['person-name', 'person-city', 'person-email', 'person-dob'],
-            plugins: [ListFuzzySearch(fuzzyOptions)]
-        };
-        new List('main', personOptions)
-    </script>
 
 </main>
 <script src="../static/resources/js/init.js" th:src="@{/resources/js/init.js}"></script>
