--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -591,18 +591,18 @@
         <table class="table table-striped table-hover">
             <thead>
             <tr>
-                <th class="col-md-4">Name</th>
+                <th class="col-md-3">Name</th>
                 <th class="col-md-3">Stadt</th>
-                <th class="col-md-2">E-Mail</th>
+                <th class="col-md-3">E-Mail</th>
                 <th class="col-md-2">Geburtsdatum</th>
                 <th class="col-md-1">Link</th>
             </tr>
             </thead>
             <tbody class="person-list" th:remove="all-but-first">
             <tr th:each="person : ${persons}">
-                <td class="person-name col-md-4" th:text="${person.name}">Claus Störtebecker</td>
+                <td class="person-name col-md-3" th:text="${person.name}">Claus Störtebecker</td>
                 <td class="person-city col-md-3" th:text="${person.address.city}">Auf dem Meer</td>
-                <td class="person-email col-md-2">
+                <td class="person-email col-md-3">
                     <a href="mailto:kaeptn@gmx.net" th:href="'mailto:' + ${person.email}" th:text="${person.email}">
                         kaeptn@gmx.net
                     </a>
@@ -611,21 +611,30 @@
                 <td class="col-md-1"><a href="personDetails.html" th:href="@{'/persons/' + ${person.id}}">Details</a></td>
             </tr>
             <tr>
-                <td class="person-name col-md-4">Max Mustermann</td>
+                <td class="person-name col-md-3">Max Mustermann</td>
                 <td class="person-city col-md-3">Zu Hause</td>
-                <td class="person-email col-md-2"><a href="mailto:max.mustermann@web.de">max.mustermann@web.de</a></td>
+                <td class="person-email col-md-3"><a href="mailto:max.mustermann@web.de">max.mustermann@web.de</a></td>
                 <td class="person-dob col-md-2">05.09.1985</td>
                 <td class="col-md-1"><a href="personDetails.html">Details</a></td>
             </tr>
             <tr>
-                <td class="person-name col-md-4">Berta Beate</td>
+                <td class="person-name col-md-3">Berta Beate</td>
                 <td class="person-city col-md-3">Entenhause</td>
-                <td class="person-email  col-md-2"><a href="mailto:berta_beate@googlemail.com">berta_beate@googlemail.com</a></td>
+                <td class="person-email  col-md-3"><a href="mailto:berta_beate@googlemail.com">berta_beate@googlemail.com</a></td>
                 <td class="person-dob col-md-2">14.09.1998</td>
                 <td class="col-md-1"><a href="personDetails.html">Details</a></td>
             </tr>
             </tbody>
         </table>
+
+        <div class="container">
+            <div class="alert alert-info text-center searching">
+                Suche läuft... <span class="glyphicon glyphicon-refresh glyphicon-load-animate"></span>
+            </div>
+            <div class="alert alert-info text-center no-results">
+                Keine Übereinstimmung
+            </div>
+        </div>
 
         <form class="text-center" th:action="@{/persons/all}" th:unless="${personDisplay == 'all'}">
             <button type="submit" class="btn btn-link btn-loading">
