--- a/src/main/resources/templates/personDetails.html
+++ b/src/main/resources/templates/personDetails.html
@@ -416,12 +416,12 @@
                                     <label class="col-sm-3 control-label">Person suchen</label>
                                     <div class="col-sm-9">
                                         <div class="clearfix" style="margin-bottom: 5px;">
-                                            <input type="text" id="connect-parent-search-firstname" class="form-control pull-left" style="width: 48%;" placeholder="Vorname" />
-                                            <input type="text" id="connect-parent-search-lastname" class="form-control pull-right" style="width: 48%;" placeholder="Nachname" />
+                                            <input type="text" id="connect-parent-search-firstname" class="form-control pull-left first-name" style="width: 48%;" placeholder="Vorname" />
+                                            <input type="text" id="connect-parent-search-lastname" class="form-control pull-right last-name" style="width: 48%;" placeholder="Nachname" />
                                         </div>
                                         <div class="clearfix">
-                                            <input type="text" id="connect-parent-search-city" class="form-control pull-left" style="width: 68%;" placeholder="Ort"/>
-                                            <button type="button" id="connect-parent-search-btn" class="btn btn-primary pull-right" style="padding-left: 20px; padding-right: 20px;">
+                                            <input type="text" id="connect-parent-search-city" class="form-control pull-left city" style="width: 68%;" placeholder="Ort"/>
+                                            <button type="button" id="connect-parent-search-btn" class="btn btn-primary pull-right search" style="padding-left: 20px; padding-right: 20px;">
                                                 Suchen
                                             </button>
                                         </div>
@@ -438,7 +438,7 @@
                                                 <th>Auswählen</th>
                                             </tr>
                                         </thead>
-                                        <tbody id="connect-parent-tablebody" th:remove="body">
+                                        <tbody id="connect-parent-tablebody" class="matches" th:remove="body">
                                             <tr>
                                                 <td>Max Mustermann</td>
                                                 <td>31.02.1999</td>
@@ -735,7 +735,8 @@
 
 </main>
 <script src="../static/resources/js/init.js" th:src="@{/resources/js/init.js}"></script>
-<script src="../static/resources/js/personDetails.js" th:src="@{/resources/js/personDetails.js}"></script>
 <script src="../static/resources/js/displayMatchingPersons.js" th:src="@{/resources/js/displayMatchingPersons.js}"></script>
+<script src="../static/resources/js/personSearch.js" th:src="@{/resources/js/personSearch.js}"></script>
+<script src="../static/resources/js/personDetails.js" th:src="@{/resources/js/personDetails.js}"></script>
 </body>
 </html>
