--- a/src/main/resources/templates/projectDetails.html
+++ b/src/main/resources/templates/projectDetails.html
@@ -60,6 +60,10 @@
                 <li role="presentation">
                     <a href="newsletters.html" th:href="@{/newsletters}"><span class="glyphicon glyphicon-envelope nav-icon" aria-hidden="true"></span> Newsletter</a>
                 </li>
+                <li role="presentation">
+                    <a href="https://trello.com/b/ukBMWp4T/naju-adebar" target="_blank"><span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>
+                    Trello</a>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li class="dropdown">
