Add link to Issue-tracker

--- a/src/main/resources/templates/accounts.html
+++ b/src/main/resources/templates/accounts.html
@@ -73,7 +73,7 @@
               </li>
               <li class="disabled"><a href="#"><span class="glyphicon glyphicon-leaf"></span> Über</a></li>
               <li class="disabled"><a href="#"><span class="glyphicon glyphicon-globe"></span> Hilfe</a></li>
-              <li><a href="#"><span class="glyphicon glyphicon-flash"></span> Fehler melden</a></li>
+              <li><a href="https://github.com/portux/NAJU-Adebar/issues"><span class="glyphicon glyphicon-fire"></span> Aktuelle Probleme</a></li>
             </ul>
           </li>
           <li class="dropdown">
