Add imprint to login page
This one is necessary due to german law.
As the server being hosted on the web now, we need to comply to this
jurisdiction.

--- a/src/main/resources/static/resources/css/login.css
+++ b/src/main/resources/static/resources/css/login.css
@@ -49,3 +49,8 @@ img.stork {
     margin-top: 25px;
     margin-bottom: 25px;
 }
+
+footer .navbar.navbar-default {
+  background-color: #ebebeb;
+  border-color: #e1e1e1;
+}
