--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,5 +30,28 @@
           <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
         </form>
     </main>
+    <footer>
+        <nav class="navbar navbar-default navbar-fixed-bottom">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bottom-nav"
+                            aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">NAJU Adebar</a>
+                </div>
+                <div id="bottom-nav" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li role="presentation">
+                            <a href="imprint.html" th:href="@{/imprint}">Impressum</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </footer>
 </body>
 </html>
