--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -476,6 +476,17 @@
                                 </div>
                             </div>
                         </div>
+                        <hr />
+                        <div class="form-group">
+                          <label for="filter-return-parents" class="col-sm-3 control-label">Ergebnisse</label>
+                          <div class="col-sm-9">
+                            <div class="checkbox">
+                              <label>
+                                <input type="checkbox" th:field="*{returnParents}" /> die Eltern der übereinstimmenden Kinder anzeigen
+                              </label>
+                            </div>
+                          </div>
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
