Include bootstrap's JS to make navbar toggleable

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,6 +8,7 @@
 
     <script type="text/javascript" src="../static/resources/js/jquery.min.js" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+    <script type="text/javascript" src="../static/resources/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
     <link rel="stylesheet" type="text/css" href="../static/resources/css/login.css" th:href="@{/resources/css/login.css}"/>
 </head>
